# receipt_tracker

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
authentication/: forms.py  urls.py  views.py
core/: admin.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
receipt_tracker/: .env.example  .env.production.example  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/authentication/: login.html  register.html
templates/core/: receipt_create.html  receipt_delete.html  receipt_detail.html  receipt_list.html  receipt_update.html
templates/include/: navbar.html
