[tool.poetry]
name = "receipt-tracker"
version = "0.1.0"
description = ""
authors = ["Benaissa Zaki <zakben45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "=4.2"
django-environ = "^0.11.2"
psycopg = {extras = ["binary"], version = "^3.1.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
